--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -435,7 +435,7 @@ h6 {
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: #040404;
     position: absolute;
     font-size: 32px;
     top: 30px;
