--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -36,19 +36,20 @@
   "datePublished": "{{ page.date }}",
   "dateModified": "{{ page.date }}"
 }
-</script>
-
-   <script type='text/javascript' src='//wormdistressedunit.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
-  
+</script>  
 </head>
 <body class="blog-page">
 
   {% include header.html %}
 
+  <div id="ad-slot" class="ad-space"></div>
+  
   <main class="main">
     {{ content }}
   </main>
 
+  <div id="ad-slot-1" class="ad-space"></div>
+  
   {% include footer.html %}
 
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
@@ -57,8 +58,6 @@
 
   <script src="{{ '/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' | relative_url }}"></script>
   <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
-
-  <script type='text/javascript' src='//pl27688123.revenuecpmgate.com/a4/a0/e5/a4a0e5d0466ca41c2a7d78f1ab4dc22b.js'></script>
   
 </body>
 </html>
