--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,6 @@
   <!-- Main CSS File -->
   <link href="/assets/css/main.css" rel="stylesheet">
 
-  <script type='text/javascript' src='//wormdistressedunit.com/0a/29/6b/0a296bc48d714a706b5b1c92a678fa87.js'></script>
-
 </head>
 
 <body class="index-page">
@@ -39,11 +37,16 @@
   <!-- ======= Header ======= -->
     {% include header.html %}
   <!-- End Header -->
+
+  <div id="ad-slot" class="ad-space"></div>
+  
   
   <main id="main">
     {{ content }}
   </main>
 
+  <div id="ad-slot-1" class="ad-space"></div>
+  
   <!-- ======= Footer ======= -->
     {% include footer.html %}
   <!-- End Footer -->
