--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,7 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
-<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
+<div id="ad-slot" class="ad-space"></div>
 
   <div class="container">
     <div class="row">
@@ -77,21 +76,14 @@ layout: default
   </div>
 {% endif %}
 
-<script type="text/javascript">
-	atOptions = {
-		'key' : '5d8f2144de59067f8ad9d41286ab8251',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//wormdistressedunit.com/5d8f2144de59067f8ad9d41286ab8251/invoke.js"></script>
+				<div id="ad-slot-inimage" class="ad-space"></div>
 
               <div class="content">
                 {{ content }}
               </div>
 
+				<div id="ad-slot-1" class="ad-space"></div>
+				
             </article>
 
           </div>
@@ -108,16 +100,14 @@ layout: default
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//wormdistressedunit.com/2ab137bbc77cdc9d788a3045be175511/invoke.js"></script>		
+
+			<div id="ad-slot-sidebar" class="ad-space"></div>
           
       {% include sidebar.html %}
     </div>
 
     </div>
   </div>
-
-<script async="async" data-cfasync="false" src="//wormdistressedunit.com/0a87f1b8f78366019c87f1e94c2638ae/invoke.js"></script>
-<div id="container-0a87f1b8f78366019c87f1e94c2638ae"></div>
   
 </main>
 
