--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,9 @@
       <div class="col-lg-2 col-md-3 footer-links">
         <h4>Useful Links</h4>
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/blog">Resource Center</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="/contact">Contact Us</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/terms-and-conditions">Terms and Conditions</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy">Privacy Policy</a></li>
         </ul>
