--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,6 +10,7 @@
   <link href="{{ '/assets/vendor/bootstrap/css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/vendor/bootstrap-icons/bootstrap-icons.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet">
+  <script src="/assets/js/inject-global-scripts.js" defer></script>
 
   <script type="application/ld+json">
 {
