Update Global Script Includes “head-scripts”

--- a/assets/includes/head-includes.html
+++ b/assets/includes/head-includes.html
@@ -1,4 +1,3 @@
-<!-- Example: HEAD-level scripts -->
-<link rel="stylesheet" href="https://yourcdn.com/some-style.css">
-<meta name="google-site-verification" content="..." />
-<script src="https://cdn.tracker.com/head-script.js"></script>
+<script>
+  console.log("🟣 Head script injected!");
+</script>
