--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2891,3 +2891,20 @@ section,
   text-decoration: none;
 }
 
+.ad-space {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+@media only screen and (max-width: 700px) {
+.ad-space {
+text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+</style>
