--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+
 <footer id="footer" class="footer">
   <div class="container footer-top">
     <div class="row gy-4">
@@ -50,6 +51,7 @@
   </div>
 </footer>
 
+<div id="footer-ad" class="ad-space"></div>
 
 <style>
   .footer .footer-about a {
