--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,9 @@
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
+  <script src="/assets/js/ads.js"></script> <!-- your ad loader -->
+  <script src="/assets/js/inject-global-scripts.js"></script> <!-- CMS script injector -->
+
   
 </body>
 
