--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,8 @@
     </form>
   </div>
 
+  <div id="ad-slot-sidebar-right" class="ad-space"></div>
+  
   <!-- Recent Posts Widget -->
 <div class="recent-posts-widget widget-item">
   <h3 class="widget-title">Recent Posts</h3>
@@ -30,7 +32,7 @@
 
 </div>
 
-<div id="ad-slot-sidebar-2" class="ad-space"></div>
+<div id="ad-slot-sidebar-right-2" class="ad-space"></div>
 
 <style>
 /* Sidebar recent posts widget */
