--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -42,6 +42,8 @@
 <body class="blog-page">
 
   {% include header.html %}
+
+  <div id="header-ad" class="ad-space"></div>
   
   <main class="main">
     {{ content }}
