--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     {% include header.html %}
   <!-- End Header -->
 
-  <div id="ad-slot" class="ad-space"></div>
+  <div id="header-ad" class="ad-space"></div>
   
   
   <main id="main">
