--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
     </nav>
   </div><!-- End Page Title -->
 
-<div id="ad-slot" class="ad-space"></div>
+	<div id="header-ad" class="ad-space"></div>
 
   <div class="container">
     <div class="row">
@@ -90,19 +90,6 @@ layout: default
         </section><!-- End Blog Details Section -->
 </div>
         <div class="col-lg-4 sidebar">
-
-          <script type="text/javascript">
-	atOptions = {
-		'key' : '2ab137bbc77cdc9d788a3045be175511',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-
-			<div id="ad-slot-sidebar" class="ad-space"></div>
-          
       {% include sidebar.html %}
     </div>
 
