--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -43,11 +43,91 @@
 
   {% include header.html %}
 
+<!-- Page Title -->
+<div class="page-title">
+  <div class="heading">
+    <div class="container">
+      <div class="row d-flex justify-content-center text-center">
+        <div class="col-lg-8">
+          <h1>Latest Blogs</h1>
+          <p class="mb-0">Read the latest posts from our team, stories, and insights.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <nav class="breadcrumbs">
+    <div class="container">
+      <ol>
+        <li><a href="{{ '/' | relative_url }}">Home</a></li>
+        <li class="current">Blog</li>
+      </ol>
+    </div>
+  </nav>
+</div>
+
+  </div>
+</div>
+
   <div id="header-ad" class="ad-space"></div>
   
-  <main class="main">
-    {{ content }}
-  </main>
+<style>
+.heading {
+  padding-top: 100px !important;
+  padding-bottom: 10px !important;
+}
+</style>
+
+
+<!-- Recent Posts Section -->
+<section id="recent-posts" class="recent-posts section" data-aos="fade-up">
+  <div class="container">
+    <div class="row gy-4">
+      {% for post in site.posts limit:12 %}
+      <div class="col-lg-4 col-md-6">
+        <article class="post-item h-100" style="padding-left: 10px;padding-right: 10px;padding-top: 10px;padding-bottom: 10px;">
+
+          {% if post.thumbnail %}
+          <div class="post-img" style="
+                position: relative;
+                overflow: hidden;
+                border-radius: 13px;
+                height: 219px;
+                width: 100%;
+                ">
+            <img src="{{ post.thumbnail | relative_url }}" alt="{{ post.title }}" class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
+          </div>
+          {% elsif post.image %}
+          <div class="post-img" style="
+                position: relative;
+                overflow: hidden;
+                border-radius: 13px;
+                ">
+            <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" class="img-fluid">
+          </div>
+          {% endif %}
+
+          <h3 class="post-title" style="margin-top: 10px;">
+            <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+          </h3>
+
+          <div class="meta d-flex align-items-center">
+            <i class="bi bi-person"></i> <span class="ps-2"><a href="https://www.linkedin.com/in/iamreemaroy" target="_blank">Reema Roy</a></span>
+            <i class="bi bi-clock ms-3"></i>
+            <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time>
+          </div>
+          <p class="mt-2">{{ post.excerpt | strip_html | truncate: 120 }}</p>
+
+          <div class="read-more">
+            <a href="{{ post.url | relative_url }}">Read More</a>
+          </div>
+        </article>
+      </div>
+      {% endfor %}
+    </div>
+
+  </div>
+</section>
+<!-- End Recent Posts Section -->
   
   {% include footer.html %}
 
