--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
           </ul>
         </li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="/wanderwithreema">Creator Spotlight</a></li>
         <li><a href="/pricing">Pricing</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
